# Budgeteer

./: .gitignore  AI_SEARCH_PRICE_ENHANCEMENT.md  API_INTEGRATION.md  BACKEND_FRONTEND_INTEGRATION.md  CHANGELOG.md  CITATIONS.md  CNAME  CODE_REFACTORING_SUMMARY.md  CONTRIBUTING.md  CORS_FIX.md  DEMO_GUIDE.md  DOCUMENTATION.md  FRONTEND_UPDATES.md  GITHUB_API_COMPLETE.md  GITHUB_API_GUIDE.md  GITHUB_API_MIGRATION.md  GPT_CHANGES.md  GPT_INTEGRATION.md  GPT_SETUP_COMPLETE.md  HEADER_3D_UPDATES.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_COMPLETE.md  LLM-instructions.txt  PRESENTATION_GUIDE.md  PRICE_DATE_BUG_FIX.md  PRICE_DATE_CLOSEST_LOGIC.md  PRICE_DISPLAY_ENHANCEMENT.md  QUICKSTART.md  QUICKSTART_INTEGRATION.md  QUICK_REFERENCE.md  README.md  README_GPT.md  README_MERGE_SUMMARY.md  ReadMeMain.md  SHOPPING_LIST_QUICK_ADD.md  SUMMARY.md  VISUAL_GUIDE.md  WORKFLOW_FIXES.md  (+7 more)
.github/workflows/: build.yml  code-quality.yml  release.yml
Backend/: .env.example  BUDGIE_PROMPT_UPDATE.md  CMakeLists.txt  CONTENT_TYPE_FIX.md  GETTING_STARTED.md  GPT_QUICK_REF.md  HTTPS_FIX.md  Makefile  OPENSSL_SETUP.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_VISUAL.md  README.md  REALTIME_API_REMOVAL.md  REASONING_CHANGELOG.md  REASONING_FEATURE.md  REASONING_FLOW_DIAGRAM.md  REASONING_IMPLEMENTATION_SUMMARY.md  REASONING_QUICK_GUIDE.md  SEARCH_LOGIC_FIX.md  SEARCH_OPTIMIZATION.md  build.bat  run-api.ps1  setup-gpt.ps1  start-http-server.ps1  test-api.ps1  test-http-server.ps1  test-reasoning.ps1
Backend/include/: ApiServer.h  Database.h  Item.h  LLMInterface.h  StoreApiClient.h
Backend/src/: ApiServer.cpp  Database.cpp  Item.cpp  LLMInterface.cpp  StoreApiClient.cpp  main.cpp
Frontend/: README.md  index.html  open-frontend.ps1  shopping-list-styles.css  styles.css
Frontend/Assets/: 3DMascot.glb
